# Pydorica

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/spine/spinedata/b0001s3/: b0001s3.atlas  b0001s3.json  index.html
data/spine/spinedata/b0001s4/: b0001s4.atlas  b0001s4.json  index.html
data/spine/spinedata/b0001s5/: b0001s5.atlas  b0001s5.json  index.html
data/spine/spinedata/b0015s3/: b0015s3.atlas  b0015s3.json  index.html
data/spine/spinedata/b0015s4/: b0015s4.atlas  b0015s4.json  index.html
data/spine/spinedata/b0015s5/: b0015s5.atlas  b0015s5.json  index.html
data/spine/spinedata/b0015s5_a2/: b0015s5_a2.atlas  b0015s5_a2.json  index.html
data/spine/spinedata/b0028s3/: b0028s3.atlas  b0028s3.json  index.html
data/spine/spinedata/b0028s4/: b0028s4.atlas  b0028s4.json  index.html
data/spine/spinedata/b0028s5/: b0028s5.atlas  b0028s5.json  index.html
data/spine/spinedata/b0037s3/: b0037s3.atlas  b0037s3.json
data/spine/spinedata/b0037s4/: b0037s4.atlas  b0037s4.json  index.html
data/spine/spinedata/b0037s5/: b0037s5.atlas  index.html
data/spine/spinedata/b0202s5/: b0202s5.atlas  index.html
data/spine/spinedata/e0002s3/: e0002s3.atlas  e0002s3.json  index.html
data/spine/spinedata/e0002s4/: e0002s4.atlas  e0002s4.json  index.html
data/spine/spinedata/e0002s5/: e0002s5.atlas  e0002s5.json  index.html
pydorica/: __init__.py  log.py
pydorica/plugins/: assetsbundle.py  charAssets.py  imperium.py  spinedata.py
pydorica/src/: Heroes.json  spine_web_player.html
pydorica/utils/: crypto.py  skel2json.py  zipper.py
(+1055 files in other folders)
